# skills_distillation

./: .agent.md  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  distillation-debugger.agent.md  mempalace-setup.md  pyproject.toml  render.yaml  requirements.sh  test_cases_extracted.json
.claude/: settings.json
.claude/rules/: agent-execution-rules.md  evaluation-rules.md  pipeline-rules.md  skills-testcases-rules.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.prompt/: create-distillation-task.md
context/: MEMORY.md  architecture.md  distillation_v2.md  feedback.md  project_state.md  user_profile.md
demo-app/: Makefile  README.md  render.yaml
demo-app/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
demo-app/backend/app/: config.py  main.py  models.py
demo-app/backend/app/routes/: run.py  skills.py
demo-app/backend/app/services/: data_loader.py  runner.py
demo-app/backend/tests/: conftest.py  test_data_loader.py  test_health.py  test_run_routes.py  test_skills_routes.py
demo-app/frontend/: package.json  pnpm-lock.yaml
distillation/: README.md  config.yaml  orchestrator.py  run.py  summarizer.py  teacher.py  utils.py
distillation/evaluator/: base.py  docx_rules.py  llm_judge.py
distillation/test_cases/: algorithmic-art.json  create_fixtures.py  docx.json  docx.json.bak  slack-gif-creator.json  xlsx.json
distillation_v2/: README.md  __init__.py  config.yaml  orchestrator.py  pipeline.py  run.py  summarizer.py  test_hello_world.py
distillation_v2/evaluator/: base.py  llm_judge.py  llm_only_judge.py  rubric_generator.py
distillation_v2/runner/: anthropic_env.py  claude_code_runner.py  config.py  logger.py  sandbox.py  stream_parser.py
distillation_v2/stages/: judge.py  rubric_gen.py  student.py  summarizer.py  teacher.py
distillation_v2/test_cases/: docx.json  internal-comms.json  slack-gif-creator.json  webapp-testing.json  xlsx.json
distillation_v2/tests/: test_converter.py  test_integration_student.py  test_rollback.py  test_rubric_gen.py  test_sandbox.py  test_stream_parser.py  test_student.py
distillation_v2/utils/: __init__.py  converter.py  llm_call.py  logging.py  rollback.py
docs/: README.md  architecture.md  contribution-and-insights.md  customizations-guide.md  phan_tich_de_cuong.md  pipeline.md  project-structure.md  results-and-risks.md  scope.md  skills_section_1.md  tech-stack.md
docs/screenshots/: README.md
skill_evaluation/: run_eval.py  viewer.html  visualize_log.py
skill_evaluation/test_cases/: create_fixtures.py  docx.json  docx.template.json  frontend-design.json  webapp-testing.json
skill_runner/: README.md  config.py  main.py  requirements.txt
skill_runner/runner/: agent_loop.py  logger.py  openrouter_client.py  prompt_builder.py  skill_loader.py  tool_definitions.py  tool_executor.py
skill_runner/tests/: conftest.py  test_agent_loop.py  test_skill_loader.py  test_tool_executor.py
skillsbench_tasks/: README.md
ui/: .env.example  README.md  index.html  metadata.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/backend/: server.py  (+3 more)
(+320 files in other folders)
